Fix #86 -- fix Lanyon listing overflow

--- a/v7/lanyon/assets/css/poole.css
+++ b/v7/lanyon/assets/css/poole.css
@@ -162,12 +162,12 @@ code {
 pre {
   display: block;
   margin-top: 0;
-  margin-bottom: 1rem;
-  padding: 1rem;
+  margin-bottom: 0;
+  padding: 0;
   font-size: .8rem;
   line-height: 1.4;
   white-space: pre;
-  white-space: pre-wrap;
+  overflow: auto;
   word-break: break-all;
   word-wrap: break-word;
   background-color: #f9f9f9;
@@ -427,4 +427,13 @@ a.pagination-item:hover {
     border-top-right-radius:    4px;
     border-bottom-right-radius: 4px;
   }
+}
+
+/* Nikola fixes */
+.codetable {
+    table-layout: fixed;
+}
+
+.codetable pre {
+    overflow-x: scroll;
 }
